--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,12 @@ body {
     font-size: 0.7rem;
 }
 
-.nav-bar a {
+a {
     text-decoration: none;
     color: #0075C5;
 }
 
-.nav-bar a:hover {
+a:hover {
     text-decoration: underline;
 }
 
@@ -66,9 +66,64 @@ main, footer {
 }
 
 fieldset {
+    background-color: #fff;
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    border: 1px solid #c7c7c7;
+    border-radius: 2px;
+}
+
+h2 {
+    font-weight: 300;
+    color: #393A3D;
+    margin-bottom: 0.4rem;
+}
+
+.sub-title {
+    text-align: center;
+    font-size: 14px;
+    margin-bottom: 0.1rem;
+}
+
+
+label {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    margin-top: 1.1rem;
+    padding-bottom: 1rem;
+}
+
+#standard-call {
+    margin-top: 0.2rem;
+    font-size: 10px;
+}
+
+input {
+    margin-top: 0.5rem;
+    padding: 0.5rem;
+    border:1px solid #c7c7c7;
+    border-radius: 2px;
+}
+
+#create-account-btn {
+    background-color: #0075C5;
+    color: white;
+    width: 90%;
+    font-size: 1rem;
+    padding: 10px 15px;
+    border-radius: 0.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+fieldset button span {
+    margin-right: 0.5rem;
 }
 
 footer li {
